2026-02-11T03:16:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21891427730 # 874
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-11
* notice: last 14d: unq all: 84 1531
* notice: prev accum: outdated-unq outdated-all / unq all: 3072 282542 / 3182 284029
* notice: next accum: outdated-unq outdated-all / unq all: 3076 282600 / 3183 284131
* notice: prev exec diff / last date diff / accum: unq all: +1 +102 -0 -0 / +1 +102 -0 -0 / 1 102
* notice: removed / changed dates: [2026-01-26] / [2026-02-09]

2026-02-10T03:18:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21850337107 # 873
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-10
* notice: last 14d: unq all: 87 1487
* notice: prev accum: outdated-unq outdated-all / unq all: 3068 282361 / 3174 283676
* notice: next accum: outdated-unq outdated-all / unq all: 3072 282542 / 3182 284029
* notice: prev exec diff / last date diff / accum: unq all: +8 +353 -0 -0 / +2 +119 -0 -0 / 2 119
* notice: removed / changed dates: [2026-01-23 2026-01-24 2026-01-25] / [2026-02-06 2026-02-07 2026-02-08]

2026-02-07T02:41:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21772789068 # 870
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-07
* notice: last 14d: unq all: 83 1315
* notice: prev accum: outdated-unq outdated-all / unq all: 3066 282305 / 3150 283533
* notice: next accum: outdated-unq outdated-all / unq all: 3068 282361 / 3174 283676
* notice: prev exec diff / last date diff / accum: unq all: +24 +143 -0 -0 / +24 +143 -0 -0 / 24 143
* notice: removed / changed dates: [2026-01-22] / [2026-02-05]

2026-02-06T02:45:57Z: