@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2026-02-12T02:55:11Z",
+  "count" : 103,
+  "count_minmax" : [ 103, 103 ],
+  "count_decinc" : [ -0, +103 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
+}
