@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2026-02-11T03:16:07Z",
-  "count_outdated" : 282600,
-  "uniques_outdated" : 3076,
-  "count" : 284131,
-  "uniques" : 3183,
+  "timestamp" : "2026-02-12T02:55:11Z",
+  "count_outdated" : 282656,
+  "uniques_outdated" : 3078,
+  "count" : 284234,
+  "uniques" : 3185,
   "clones" : [
-    {
-      "timestamp": "2026-01-27T00:00:00Z",
-      "count": 56,
-      "count_minmax": [ 56, 56 ],
-      "count_decinc": [ 0, 56 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2026-01-28T00:00:00Z",
       "count": 65,
@@ -130,6 +121,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2026-02-10T00:00:00Z",
+      "count": 103,
+      "count_minmax": [ 103, 103 ],
+      "count_decinc": [ 0, 103 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
