@@ -1,12 +1,7 @@
 {
-  "count": 1531,
+  "count": 1578,
   "uniques": 84,
   "clones": [
-    {
-      "timestamp": "2026-01-27T00:00:00Z",
-      "count": 56,
-      "uniques": 2
-    },
     {
       "timestamp": "2026-01-28T00:00:00Z",
       "count": 65,
@@ -71,6 +66,11 @@
       "timestamp": "2026-02-09T00:00:00Z",
       "count": 102,
       "uniques": 1
+    },
+    {
+      "timestamp": "2026-02-10T00:00:00Z",
+      "count": 103,
+      "uniques": 2
     }
   ]
 }
