@@ -1,3 +1,12 @@
+2026-02-12T02:55:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21931747111 # 875
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-12
+* notice: last 14d: unq all: 84 1578
+* notice: prev accum: outdated-unq outdated-all / unq all: 3076 282600 / 3183 284131
+* notice: next accum: outdated-unq outdated-all / unq all: 3078 282656 / 3185 284234
+* notice: prev exec diff / last date diff / accum: unq all: +2 +103 -0 -0 / +2 +103 -0 -0 / 2 103
+* notice: removed / changed dates: [2026-01-27] / [2026-02-10]
+
 2026-02-11T03:16:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21891427730 # 874
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-11
